# INSIST

./: .pypirc  .readthedocs.yaml  Exposure_Time_Calculator.ipynb  Exposure_Time_Calculator_Tool.ipynb  INSIST_PSF_Tool.ipynb  MANIFEST.in  PSF_Analysis.ipynb  PSF_Convolve.ipynb  PSF_Simulator.ipynb  PSF_Simulator_Tool.ipynb  README.md  UV_Stellar_Catalog.ipynb  on_axis1.TXT  requirements.txt  setup.cfg  setup.py  user_defined_psf.npy
.github/workflows/: pylint.yml
data/: M31_UVIT_PanSTARRS_crossmatch.fits  M31_crossmatch.fits  M67_GALEX.csv  M67_PS1.csv  Off_PSF_Zmax.npy  On_PSF_Zmax.npy  PanSTARRS_UVIT_conv (1).fits  PanSTARRS_UVIT_conv.fits  UVIT_PS1_stellar_catalog.csv  detector_parameters.csv  exposure_off.yaml  exposure_on.yaml  nominal6.txt  off_axis.TXT  off_axis_hcipy.npy  on_axis.TXT  on_axis_hcipy.npy  on_axis_nor.TXT  phatm31.fit  plot.py
docs/: conf.py  index.rst  make.bat  modules.rst  pista.rst  requirements.txt
docs/source/: conf.py  example.rst  getting_started.rst  index.rst  pista.rst
ipista/ipista/: __init__.py  (+1 more)
notebooks/: Exposure_Time_Calculator_Tool.ipynb  Galaxy_Clump_Simulation.ipynb  Galaxy_Simulation_PISTA_GalSim.ipynb  INSIST_PSF_Tool.ipynb  Image_Simulation.ipynb  Image_Simulation_HST.ipynb  Image_Simulation_JWST.ipynb  Image_Simulation_M82.ipynb  Light_curve.ipynb  PISTA.ipynb  PISTA_distance_transform.ipynb  PSF_Simulator.ipynb  UV_Stellar_Catalog.ipynb
pista/: MANIFEST.in  main.py  setup.py
pista_gui/: main.py  tmptebzst17
tests/: test_A_utils.py  test_B_simulation.py  test_C_analysis.py  test_Imager.py  test_bandpass.py
(+43 files in other folders)
