[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.10
install_requires =
  pandas
  matplotlib
  astropy
  photutils==2.3.0
  numpy==2.3.5
  seaborn
  opencv-python
  reproject
  scipy
  tqdm

[options.extras_require]
torch =
  torch
